syntax = "proto3";
package v1;

import "google/api/annotations.proto";

message HelloRequest {
    string message = 1;
}

message HelloReply {
    string message = 1;
    string test_val = 2;
}


// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post : "/v1/search"
      body: "*"
		};
  }
}